--- a/courses.html
+++ b/courses.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#section1 {
+	.section1 {
 	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
@@ -45,7 +45,7 @@
 /* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
-	#section2 {
+	.section2 {
 	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
@@ -57,7 +57,7 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
-	#footer1 {
+	.footer1 {
 	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
@@ -69,7 +69,7 @@
 /* 		border-color:skyblue; */
 		text-align: justify;
 	}
-	#footer2 {
+	.footer2 {
 	        background-color:powderblue;
 	        color:black;
 	        clear:both;
@@ -81,6 +81,9 @@
 		margin-top: 10px;
 		text-align: justify;
 	}
+	.removeborder{ 
+		border: none
+		}
 	</style>
 </head>
     
@@ -137,11 +140,11 @@
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">Online Training Courses</p>
 <!--                      <hr> -->
-		     <div id="section1">
+		     <div class="section1 removeborder">
                     <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
 		    </div>
 <!-- 			<hr> -->
-		    <div id="section2">
+		    <div class="section2 removeborder">
                     <p style="text-align: center;font-size: 20px">The First Course Session</p>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation (格密码课程)<a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
@@ -149,7 +152,7 @@
                     <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
 <!-- 			    <hr> -->
-		    <div id="footer1">
+		    <div class="footer1 removeborder">
                     <p style="text-align: center;font-size: 20px">The Second Course Session</p> 
                     <p style="text-indent:2em ">*Differential Privacy (差分隐私及其应用课程) <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
                     <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
@@ -158,7 +161,7 @@
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
 		    </div>
 <!-- 			    <hr> -->
-		    <div id="footer2">
+		    <div class="footer2 removeborder">
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
 		    </div>		   
         </div>
