--- a/Conference.html
+++ b/Conference.html
@@ -87,7 +87,7 @@
 </head>
     
      
-<body background="image/图片2.png">
+<body background="image/图片11.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
