--- a/project.html
+++ b/project.html
@@ -116,7 +116,7 @@ date.setTime(date.getTime() - skew)
 }
 </script>
 <div id="google_translate_element"></div>    
-<body background="image/图片5.png">
+<body background="image/图片15.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
