--- a/Conference.html
+++ b/Conference.html
@@ -139,29 +139,25 @@
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
-		     <!-- <div class="section1 removeborder">
-                    <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
-		    <!-- </div> -->
+		      <div class="section1 removeborder">
+                     <p style="text-indent:2em ">With rapid development of information science, especially Interdisciplinary development, it is very important for experts in different fields to discuss with each other around the world.<br/>
+		     </div>
 			<!-- <hr> -->
-		    <div class="section2 removeborder">
-                    <p style="text-align: center;font-size: 20px"><!-- The --> </p>
-                    <p style="text-indent:2em ">*Fully <br/>
-                    <p style="text-indent:2em ">*Lattice-based <br/>
-                    <p style="text-indent:2em ">*Secure <br/>
-                    <p style="text-indent:2em ">*AI and Security <br/>
+		    <div class="section2 removeborder">                  
+                    <p style="text-indent:2em ">DFSC organizes and participates in the organization of a series of conferences in information science. Conferences would like to invite well-known experts in theoretical research, implementation and application to give invited topics including: Mathematical theory and its application, Cryptographic theory and its application, Cyberspace security, Artificial intelligence, Digital economics and society, Cloud computing, Secure and privacy-preserving computation, Hardware design and implementation, Software design and implementation, Quantum computation and its application, 5G/6G communication and application, Internet of Things, Autopilot and implementation, Satellite communication and its application, etc..<br/> 
 		    </div>
-			    <hr>
+<!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
-                    <p style="text-align: center;font-size: 20px"><!-- The --></p> 
-                    <p style="text-indent:2em ">*Differential Privacy <br/> 
-                    <p style="text-indent:2em ">*Secure Computation <br/>
-                    <p style="text-indent:2em ">*Blockchains and Applications <br/>
-                    <p style="text-indent:2em ">*Advanced Topics in Cryptography <br/>
-                    <p style="text-indent:2em ">*Trusted Computing<br/> 
+                    <p style="text-align: center;font-size: 20px">The conference list</p> 
+                    <p style="text-indent:2em ">International Data Secure and Privacy-preserving Computation Conference -DSPC Conference<br/> 
+                    <p style="text-indent:2em ">International Quantum Computation and Post-quantum Cryptography Conference-QPQC Conference<br/>
+                    <p style="text-indent:2em ">International Cybersecurity and Applied Cryptography Conference-CSAC Conference<br/>
+                    <p style="text-indent:2em ">International Code and Cryptography and Application Conference-CC Conference<br/>                   
 		    </div>
 		    <!-- <hr> -->
 		    <div class="footer2 removeborder">
-		                    <p style="text-indent:2em ">Online  <br/> 
+			    <p style="text-align: center;font-size: 20px">Conference sponsorship and cooperation</p>
+			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, contact(链接到如下的页面) us.<br/>                            	                   
 		    		    </div>		    		    
 		            </div>
 		    <script type="text/javascript">
