--- a/Conference.html
+++ b/Conference.html
@@ -137,6 +137,7 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
+		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
 		      <div class="section1 removeborder">
