--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 	    margin-bottom: 30px;
 	    text-align:justify;
 	}
+	.footer3{
+		
+		}
 	.induc{
 		color:  skyblue;
 	} 
@@ -133,7 +136,10 @@
                                 <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
             			</div>
             		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;margin: 10px;"></a> <br/>
-                 <script type="text/javascript">
+                            <div class="footer3">
+				    <p><a href="contact.html"></a></p>
+		    </div>
+		    <script type="text/javascript">
                      function googleTranslateElementInit() {
                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
                 }
