--- a/Conference.html
+++ b/Conference.html
@@ -80,6 +80,9 @@
 		margin-top: 10px;
 		text-align: justify;
 	}
+	.footer3{
+		margin-top: 10px;
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -158,9 +161,66 @@
 		    <!-- <hr> -->
 		    <div class="footer2 removeborder">
 			    <p style="text-align: center;font-size: 20px">Conference sponsorship and cooperation</p>
-			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, contact(链接到如下的页面) us.<br/>                            	                   
+			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, <a href="contact.html">contact</a>us.<br/>                            	                   
 		    		    </div>		    		    
 		            </div>
+		    <div class="footer3">
+			    <form action="">
+			<titel><strong><font size="10" >CONTACT US</font></strong></titel><br>
+			<table border="0">
+				<tr>
+					<td>Firstname:</td>
+					<td>Lastname:</td>
+				</tr>
+				<tr>
+					<td><input type="text" name="Firstname" ></td>
+					<td><input type="text" name="Lastname" ></td>
+				</tr>
+				<tr>
+								<td>Company Email</td>
+							</tr>
+							<tr>
+								<td colspan=2 >
+									<input type="text" name="Company Email" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Company name</td>
+							</tr>
+							<tr>
+								<td colspan=2>
+									<input type="text" name="Company name" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Reason for contacting us</td>
+							</tr>
+							<tr>
+								<td colspan=2>
+									<input type="text" name="Reason for contacting us" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Please select</td>
+							</tr>
+							<tr>
+								<td>
+								<select colspan=2>
+									<option value="Please select" ></option>
+								<select>
+								</td>
+							</tr>
+							<tr>
+								<td>Message</td>
+							</tr>
+							<tr >
+								<td colspan=2>
+									<textarea rows="8" cols="60"></textarea>
+								</td>
+							</tr>
+
+		</form> 
+		    </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
 		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
