--- a/News.html
+++ b/News.html
@@ -88,7 +88,7 @@
 </head>
     
      
-<body background="image/图片1.jpg">
+<body background="image/图片1.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
