--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,7 @@
 </head>
     
      
-<body background="image/图片2.jpg">
+<body background="image/图片2.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
