--- a/index.html
+++ b/index.html
@@ -57,8 +57,20 @@
 	    margin-bottom: 30px;
 	    text-align:justify;
 	}
+	.footer1 {
+	    background-color:skyblue;
+	    color:black;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+	    border-style: groove;	    
+	    border-radius: 20px;
+	    margin-top: 15px;
+	    margin-bottom: 30px;
+	    text-align:justify;
+	}
 	.footer3{
-		margin-top: 15px;
+		margin-top: 15px;	
 		}
 	.induc{
 		color:  skyblue;
@@ -123,76 +135,20 @@
             		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
-                                <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
-            <!--                      <hr> -->
+                                <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>            
             			<div class="section removeborder">
-                                <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. We have invited a group of professors and researchers in information science to join DFSC.<br/>
-                                <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
-                                <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/>
-            			</div>
-            <!--                     <hr> -->
+                                <p style="text-indent:2em ">Digital Future Research Center (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. <br/>
+            			</div>        
                                 <div class="footer removeborder">
-                                <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
-                                <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
+                                <p style="text-indent:2em ">DFSC have invited a group of professors and researchers in information science to join DFSC, and has been built a series of cooperation with Universities and Enterprises. <br/>					
             			</div>
-            		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;margin: 10px;"></a> <br/>
-                            <div class="footer3">				  
-			    <form action="">
-			<titel><strong><font size="10" >CONTACT US</font></strong></titel><br>
-			<table border="0">
-				<tr>
-					<td>Firstname:</td>
-					<td>Lastname:</td>
-				</tr>
-				<tr>
-					<td><input type="text" name="Firstname" ></td>
-					<td><input type="text" name="Lastname" ></td>
-				</tr>
-				<tr>
-								<td>Company Email</td>
-							</tr>
-							<tr>
-								<td colspan=2 >
-									<input type="text" name="Company Email" style="width: 418px;height: 20px;">
-								</td>
-							</tr>
-							<tr>
-								<td>Company name</td>
-							</tr>
-							<tr>
-								<td colspan=2>
-									<input type="text" name="Company name" style="width: 418px;height: 20px;">
-								</td>
-							</tr>
-							<tr>
-								<td>Reason for contacting us</td>
-							</tr>
-							<tr>
-								<td colspan=2>
-									<input type="text" name="Reason for contacting us" style="width: 418px;height: 20px;">
-								</td>
-							</tr>
-							<tr>
-								<td>Please select</td>
-							</tr>
-							<tr>
-								<td>
-								<select colspan=2>
-									<option value="Please select" ></option>
-								<select>
-								</td>
-							</tr>
-							<tr>
-								<td>Message</td>
-							</tr>
-							<tr >
-								<td colspan=2>
-									<textarea rows="8" cols="60"></textarea>
-								</td>
-							</tr>
-
-		</form> 
+                            <div class="footer1">				  
+				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="">conferences</a> in information science. At the same time, DFSC also provides online training <a href="">courses</a> to cultivate talents in information science.</p>
 		    </div>
+		<div class="footer3">
+			<p><a href="contact.html">contact</a></p>
+				</div>
+		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;margin: 10px;"></a> <br/>
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
