--- a/Research.html
+++ b/Research.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	 .section1 {
+	.section1 {
 	          background-color:lightcyan;
 	          color:black;
 	          clear:both;
@@ -43,7 +43,7 @@
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
-/* 		  */
+/* 		  border-color: skyblue; */
 	}
 	.section2 {
 	          background-color:lightcyan;
@@ -51,13 +51,13 @@
 	          clear:both;
 	          text-align:center;
 	          padding:5px; 
-	   	  border-style: groove;		  
+	   	  border-style: groove;		 
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
-/* 		 border-color: skyblue; */
+/* 		  border-color: skyblue; */
 	}
-        .footer {
+	.footer {
 	          background-color:powderblue;
 	          color:black;
 	          clear:both;
@@ -66,9 +66,45 @@
 	   	  border-style: groove;		 
 		  border-radius: 20px;
 		  margin-top: 30px;
-		 text-align: justify;
-/* 		 border-color: skyblue; */
+		  text-align: justify;
+/* 		  border-color: skyblue; */
 	}
+	.section3 {
+		          background-color:lightcyan;
+		          color:black;
+		          clear:both;
+		          text-align:center;
+		          padding:5px; 
+		   	  border-style: groove;		  
+			  border-radius: 20px;
+			  margin-top: 30px;
+			  text-align: justify;
+	/* 		  */
+		}
+		.section4 {
+		          background-color:lightcyan;
+		          color:black;
+		          clear:both;
+		          text-align:center;
+		          padding:5px; 
+		   	  border-style: groove;		  
+			  border-radius: 20px;
+			  margin-top: 30px;
+			  text-align: justify;
+	/* 		 border-color: skyblue; */
+		}
+	        .footer3 {
+		          background-color:powderblue;
+		          color:black;
+		          clear:both;
+		          text-align:center;
+		          padding:5px; 
+		   	  border-style: groove;		 
+			  border-radius: 20px;
+			  margin-top: 30px;
+			 text-align: justify;
+	/* 		 border-color: skyblue; */
+		}
 	.footer1{
 		margin-top: 60px;	
 		}
@@ -122,7 +158,7 @@ date.setTime(date.getTime() - skew)
 }
 </script>
 <div id="google_translate_element"></div>    
-<body background="image/图片4.png">
+<body background="image/图片5.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
@@ -151,17 +187,14 @@ date.setTime(date.getTime() - skew)
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
+					<li ><a href="CC Introduction.html">CC</a></li>				
 				</ul>
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="project.html">Projects</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="product.html">Products</a>
+                                    <a href="Research.html">Research</a>
                                 </li>
 				<li class="submenu">
                                     <a href="About us Introduction.html">About us</a>
@@ -174,27 +207,41 @@ date.setTime(date.getTime() - skew)
 
             <div id = "introdution">
             <div class="introdution">
-              <div id="theme">
-                    <p style="text-align: center;font-size: 20px">Products</p>
-<!--               <hr size='1'> -->
-		<div class="section1 removeborder">
+                <div id="theme">
+                    <p style="text-align: center;font-size: 20px">Projects</p>
+<!--                      <hr color="bisque"> -->
+		 <div class="section1 removeborder">
                     <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
 		</div>
-<!-- 		    <hr size='1'> -->
-                <div class="section2 removeborder">
-                    <p style="text-indent:2em ">*Fully Homomorphic Encryption Implementation Demo.<br/>                
-                     <p style="text-indent:2em ">*Lattice-based Cryptography Implementation Demo<br/>
-		</div>  
-<!-- 	            <hr size='1'> -->
-		<div class="footer removeborder">
-                <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
-		</div>
+<!-- 	          <hr color="bisque"> -->
+		    <div class="section2 removeborder"
+                    <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation<br/>
+                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
+		    </div>
+<!--                  <hr color="bisque"> -->
+	        <div class="footer removeborder">
+                <p style="text-indent:2em ">Projects Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
+		</div> 
+		  <p style="text-align: center;font-size: 20px">Products</p>
+		  <!--               <hr size='1'> -->
+		  		<div class="section3 removeborder">
+		                      <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
+		  		</div>
+		  <!-- 		    <hr size='1'> -->
+		                  <div class="section4 removeborder">
+		                      <p style="text-indent:2em ">*Fully Homomorphic Encryption Implementation Demo.<br/>                
+		                       <p style="text-indent:2em ">*Lattice-based Cryptography Implementation Demo<br/>
+		  		</div>  
+		  <!-- 	            <hr size='1'> -->
+		  		<div class="footer3 removeborder">
+		                  <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
+		  		</div>
 		<div class="footer1 removeborder">
-                <p style="text-align:center"></a> <br/>
-		</div>
-		<div class="footer2 removeborder">
-                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>
-		</div>
+		    <p style="text-align:center"></a> <br/>
+		       </div>   
+		    <div class="footer2 removeborder">
+			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
+		    </div>
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
