--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -88,11 +88,11 @@
             <div class="introdution">
             <div id="theme">
                        <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"  style="width: 210px; height: 213px; " ></a> <br/>
-                <div class="section1 removeborder">
-		    <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposium would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.<br/>
+                <div class="footer1 removeborder">
+		    <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposium would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.</a><br/>
                    </div>
-		    <div class="footer removeborder">
-		    <p style="text-indent:2em ">Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.<br/>
+		    <div class="footer2 removeborder">
+		    <p style="text-indent:2em ">Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.</a><br/>
               
 		    <p style="text-indent:2em "><a href="SMPC-2017.html">SMPC Symposium-2017</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SMPC-2018.html">SMPC Symposium-2018</a> <br/>
                     <p style="text-indent:2em "><a href="SMPC-2019.html">SMPC Symposium-2019</a> &nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SMPC-2020.html">SMPC Symposium-2020</a> <br/>
